fix(header.module.css): добавила свойство z-index

--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -61,6 +61,7 @@
   opacity: 0;
   visibility: hidden;
   transition: 0.3s;
+  z-index: 999;
 }
 
 .dropdownTrigger {
